# sia-test-bench

./: Dockerfile  README.md  doover_config.json  pyproject.toml
.github/workflows/: build-image.yml  lint-and-test.yml  run-linting.yml  run-tests.yml
frontend/src/: App.css
frontend/src/components/: ControlPlane.css  ControlPlane.tsx  SplitPane.css
simulators/: app_config.json  docker-compose.yml
simulators/sample/: Dockerfile  main.py  pyproject.toml
src/sia_test_bench/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py  server.py
src/sia_test_bench/frontend/: README.md  package-lock.json  package.json
src/sia_test_bench/frontend/src/: App.css  App.tsx  index.css
src/sia_test_bench/frontend/src/components/: ControlPlane.css  ControlPlane.tsx  Header.css  Header.tsx  SplitPane.css  SplitPane.tsx  TestBenchMockup.css  TestBenchMockup.tsx  VisualizationPlane.css  VisualizationPlane.tsx
src/sia_test_bench/frontend/src/hooks/: useWebSocket.ts
src/sia_test_bench/frontend/src/store/: useTestBenchStore.ts
tests/: test_imports.py
